# pliron

./: Cargo.toml  README.md
.github/workflows/: docs-pages-index.html  docs-pages.yml
examples/kaleidoscope/: README.md  factorial.kal  fibonacci.kal  from_ast.rs  jit.rs  to_llvm.rs
kaleidoscope/: README.md
kaleidoscope/src/: SUMMARY.md  ch1-parser.md  ch2-dialect.md  ch3-from_ast.md  ch4-to_llvm.md  ch5-jit.md  introduction.md
pliron-clif/: Cargo.toml  README.md  cargo_expand_output.rs
pliron-clif/clif/: clif_fnabi.json  clif_opcodes.rs  test_clif_func_abi.json
pliron-clif/src/: attributes.rs  from_clif_ir.rs  lib.rs  op_interfaces.rs  ops.rs
pliron-llvm/src/: attributes.rs  from_llvm_ir.rs  interface_impls.rs  ops.rs  to_llvm_ir.rs  types.rs
pliron-llvm/src/llvm_sys/: core.rs
pliron-llvm/tests/: compile_run.rs  op_unit_tests.rs
src/: basic_block.rs  parsable.rs  pass_manager.rs  printable.rs
src/builtin/: interface_impls.rs  mod.rs  op_interfaces.rs  ops.rs
src/irbuild/: cloning.rs  dialect_conversion.rs  match_rewrite.rs  mod.rs  rewriter.rs
src/opts/: dce.rs  mem2reg.rs  mod.rs  simplify_cfg.rs
tests/: cloning.rs  rewriter.rs
tests/common/: mod.rs
tests/opts/: dce.rs  mem2reg.rs
