[package]
name = "pliron-clif"
description = "CLIF dialect for pliron"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
pliron = { path = "../", version = "0" }
linkme.workspace = true