[package]
name = "pliron-clif"
description = "CLIF dialect for pliron"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
pliron = { path = "../", version = "0" }
linkme.workspace = true
thiserror.workspace = true
combine.workspace = true
cranelift-codegen.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
cranelift-reader.workspace = true

